--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 VITE_APP_VERSION = v3.0.0
-GENERATE_SOURCEMAP = false
+GENERATE_SOURCEMAP = true
 
 ## Public URL
-PUBLIC_URL = https://codedthemes.com/demos/admin-templates/datta-able/react/free/
-VITE_APP_BASE_NAME= admin
+VITE_APP_BASE_NAME=
 
 ## Google Map Key
 VITE_APP_GOOGLE_MAPS_API_KEY=
