--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.22.3",
     "slugify": "1.6.6",
+    "styled-components": "^6.1.13",
     "vite": "^5.2.0",
     "vite-jsconfig-paths": "^2.0.1",
     "web-vitals": "^3.5.2",
