--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-cloudinary-upload-widget": "^2.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
