--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.28.0",
     "slugify": "1.6.6",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.5",
     "vite": "^5.2.0",
     "vite-jsconfig-paths": "^2.0.1",
     "web-vitals": "^3.5.2",
