Fix trang thai cua Category (ADMIN_UI) -thi

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ VITE_APP_BASE_NAME=
 ## Google Map Key
 VITE_APP_GOOGLE_MAPS_API_KEY=
 
+CLOUDINARY_NAME=AVBC
+CLOUDINARY_KEY=977911719117229
+CLOUDINARY_SECRET=0c6_8v4QrQ-kpV1vV045KLB5mD4
